# swagger-output.json
@@ -15,6 +15,10 @@
         {
             "name": "user",
             "description": "User Endpoints"
+        },
+        {
+            "name": "task",
+            "description": "Task Endpoints"
         }
     ],
     "consumes": [
@@ -175,6 +179,101 @@
                     }
                 }
             }
+        },
+        "/task": {
+            "post": {
+                "tags": ["task"],
+                "description": "Create a Task",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "obj",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CreateTask"
+                        }
+                    }
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Registration Successful"
+                    }
+                }
+            },
+            "get": {
+                "tags": ["task"],
+                "description": "Read Tasks",
+                "parameters": [],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Resource Fetched Successfully"
+                    }
+                }
+            }
+        },
+        "/task/{id}": {
+            "put": {
+                "tags": ["task"],
+                "description": "Update a Task",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "obj",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/UpdateTask"
+                        }
+                    }
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Resource Updated Successfully"
+                    }
+                }
+            },
+            "delete": {
+                "tags": ["task"],
+                "description": "Delete Task",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Resource Deleted Successfully"
+                    }
+                }
+            }
         }
     },
     "securityDefinitions": {
@@ -268,6 +367,29 @@
                     "type": "string",
                     "format": "password",
                     "example": "password@2022#"
+                }
+            }
+        },
+        "CreateTask": {
+            "type": "object",
+            "required": ["description"],
+            "properties":{
+                "description": {
+                    "type": "string",
+                    "example": "Go shopping"
+                }
+            }
+        },
+        "UpdateTask": {
+            "type": "object",
+            "properties":{
+                "description": {
+                    "type": "string",
+                    "example": "Plan a vacation"
+                },
+                "completed": {
+                    "type": "boolean",
+                    "example": true
                 }
             }
         }
